--- a/goodgulp/package.json
+++ b/goodgulp/package.json
@@ -3,5 +3,15 @@
   "version": "1.0.0",
   "description": "gulp 101",
   "main": "index.js",
-  "license": "MIT"
+  "license": "MIT",
+  "scripts": {
+    "dev": "gulp dev",
+    "build": "gulp build"
+  },
+  "devDependencies": {
+    "gulp": "^4.0.2",
+    "@babel/core": "^7.16.12",
+    "@babel/preset-env": "^7.16.11",
+    "@babel/register": "^7.16.9"
+  }
 }
